<resources>
    <string name="app_name">UW Hub</string>
    <string name="home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="weather">Weather</string>
    <string name="loading_widget">Loading...</string>
    <string name="info_sessions">Info Sessions</string>
    <string name="courses">Courses</string>
    <string name="remove">Remove</string>

    <string name="description">Description</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="antirequisites">Antirequisites</string>
    <string name="corequisites">Corequisites</string>
    <string name="cross_listings">Cross Listings</string>
    <string name="terms_offered">Terms Offered</string>
    <string name="components">Components</string>
    <string name="campus_offerings">Campus Offerings</string>
    <string name="required_consent">Required Consent</string>
    <string name="no_connection">No Connection</string>
    <string name="connect">Connect</string>

    <string name="online">Online</string>
    <string name="online_only">Online Only</string>
    <string name="st_jeromes">St. Jeromes</string>
    <string name="st_jeromes_only">St. Jeromes Only</string>
    <string name="renison">Renison</string>
    <string name="renison_only">Renison Only</string>
    <string name="conrad_grebel">Conrad Grebel</string>
    <string name="conrad_grebel_only">Conrad Grebel Only</string>

    <string name="department">Department</string>
    <string name="instructor">Instructor</string>

    <string name="default_string">N/A</string>
    <string name="main_campus">Main Campus</string>
    <string name="currently_not_offered">Currently not being offered</string>

    <string name="search_courses">Search Courses - eg. CS 135</string>
    <string name="search_employers">Search Employers</string>
    <string name="no_info_sessions_available">No info sessions available</string>
    <string name="no_saved_info_sessions">You have no saved info sessions</string>
    <string name="no_courses_available">No courses available</string>
    <string name="no_sections_available">No sections available</string>
    <string name="info_session_save_at_time_of_event">Info session saved\nYou\'ll receive a notification at the time of the event</string>
    <string name="info_session_save_before">Info session saved\nYou\'ll receive a notification %1$s before the event</string>
    <string name="info_session_removed">Info session removed</string>

    <string name="weather_widget_exists">Already have a Weather Widget</string>
    <string name="info_session_widget_exists">Already have an Info Session Widget</string>

</resources>
